<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.panagiotis.retrofit2_post_get.Fragments.Login_Fragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:id="@+id/login_picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/login_user_name"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_name"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/login_password"
        android:hint="Password"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:id="@+id/login_button" />

</RelativeLayout>
