<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.panagiotis.retrofit2_post_get.Fragments.Profile_Fragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:id="@+id/Profile_email"
        android:textSize="18sp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profile_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/Profile_Password"
        android:textSize="18sp" />

    <Button
        android:text="Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profile_Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:id="@+id/logoutButton" />
</RelativeLayout>
